<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Main">

    <RelativeLayout
        android:id="@+id/mainRelativeLayoutGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/mainTextViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/mainTextViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#000000">
        </FrameLayout>

        <Button
            android:id="@+id/buttonMainAutoComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mainTextViewTime"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button"
            android:onClick="menuClick"
            android:text="@string/autoComplete_text"
            android:visibility="gone"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e7e7e7"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mainButtonScores"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_menu"
                android:contentDescription="@string/menu_scores"
                android:onClick="menuClick"
                android:src="@drawable/highscores"/>

            <ImageView
                android:id="@+id/mainButtonHint"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_menu"
                android:contentDescription="@string/menu_hint"
                android:onClick="menuClick"
                android:src="@drawable/hint"/>

            <ImageView
                android:id="@+id/mainButtonRestart"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_menu"
                android:contentDescription="@string/menu_restart"
                android:onClick="menuClick"
                android:src="@drawable/restart"/>

            <FrameLayout
                android:id="@+id/ad_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/ivMenuAd"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:transitionName="@string/shared_native_media_view"
                    android:contentDescription=""
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_gravity="center_horizontal"/>
            </FrameLayout>

            <ImageView
                android:id="@+id/mainButtonSettings"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_menu"
                android:contentDescription="@string/menu_settings"
                android:onClick="menuClick"
                android:src="@drawable/settings"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/menu_scores"/>

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/menu_hint"/>

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/menu_restart"/>

            <TextView
                android:id="@+id/tvAdTitle"
                style="@android:style/TextAppearance.Small"
                android:transitionName="@string/shared_native_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="Test"
                android:textSize="10sp"
                android:textAlignment="center"/>

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/menu_settings"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>